# brando

./: Cargo.toml  README.md  events.md
.github/workflows/: rust.yml
brando_lib/: Cargo.toml
brando_lib/src/: builder.rs  errors.rs  heigth.rs  lib.rs  map.rs  mayor.rs  orchestrator.rs  point.rs  requests.rs  responses.rs
brando_lib/src/buildings/: concrete.rs  mod.rs  prototype.rs
src/: main.rs  navigator.rs  palatability.rs  position.rs
src/building/: builder.rs  buildings.rs  manager.rs  mod.rs  plugin.rs
src/building/buildings/: biomass_power_plant.rs  garden.rs  house.rs  mod.rs  office.rs  snapshot.rs  street.rs
src/common/: configuration.rs  enums.rs  mod.rs  position.rs  position_utils.rs
src/e2e_test/: building.rs  mod.rs  palatability.rs  utils.rs
src/inhabitant/: entity_storage.rs  inhabitant.rs  inhabitant_entity.rs  manager.rs  mod.rs  plugin.rs
src/navigation/: entity_storage.rs  mod.rs  navigator.rs  plugin.rs
src/palatability/: manager.rs  mod.rs  plugin.rs
src/plugin/: building.rs  mod.rs  navigator.rs  palatability.rs
src/power/: manager.rs  mod.rs  plugin.rs
