[package]
name = "brando"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9" }
bevy_asset_loader =  { version = "0.13" }
bevy_mod_picking = "0.10"
thiserror = "1.0"
tracing = "0.1"
pathfinding = "3"
futures-lite = "1"
ccl = "5"
chrono = "0.4"
lombok = "0.3"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-log = "0.1"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
