[package]
name = "brando_lib"
version = "0.0.0"
authors = ["Tommaso Allevi <tomallevi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
