[package]
name = "brando_lib"
version = "0.0.0"
authors = ["Tommaso Allevi <tomallevi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"

[dev-dependencies]
mockers = "0.21.0"
mockers_derive = "0.21.0"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"]
